<resources>
    <string name="app_name" translatable="false">Manga2Kindle</string>
    <string name="chapter_title_max_length" translatable="false">100</string>

    <!-- Services -->
    <string name="service_ScanManga_description">Search for new manga chapters</string>
    <string name="service_UpdateChapterStatus_description">Update uploaded chapters statuses</string>
    <string name="service_ScanRemovedChapters_description">Remove from database the new chapters removed from the device</string>
    <string name="service_UploadChapter_description">Upload the chapters to the server</string>

    <!-- Views -->
    <string name="new_chapters_view_title">New Chapters View</string>
    <string name="new_chapters_chapter_hidden">Chapter hidden</string>
    <string name="new_chapters_empty_list">Looks like this list is empty!</string>

    <string name="uploaded_chapters_title">Uploaded Chapters View</string>
    <string name="uploaded_chapters_empty_list">Looks like this list is empty!</string>
    <string name="uploaded_chapters_todo_hide_entry" translatable="false">TODO: hide entry</string>
    <string name="uploaded_chapters_chapter_hidden">Chapter hidden</string>

    <string name="author_form_title">New Author</string>
    <string name="author_form_name_input_hint">Name</string>
    <string name="author_form_surname_input_hint">Surname</string>
    <string name="author_form_nickname_input_hint">Nickname</string>
    <string name="author_form_naming_warning">Hey! \nRemember, in Japanese names and surnames are reversed so in "Kamoshida Hajime" the name is "Hajime"! \nTry not to mess this up!</string>

    <string name="chapter_form_title">Upload Chapter</string>
    <string name="chapter_form_manga_hint">Manga</string>
    <string name="chapter_form_chapter">Chapter</string>
    <string name="chapter_form_volume">Volume</string>
    <string name="chapter_form_title_hint">Title</string>
    <string name="chapter_form_author_hint">Author</string>
    <string name="chapter_form_lang_hint">Lang</string>
    <string name="chapter_form_add_author">Add</string>
    <string name="chapter_form_no_author_toast">You can\'t upload a chapter without author!\n(we are working on it)</string>
    <string name="chapter_form_doublePage">With double pages…</string>
    <string name="chapter_form_splitMode_noSplit">Show double pages in horizontal</string>
    <string name="chapter_form_splitMode_split">Cut double pages and show in two pages</string>
    <string name="chapter_form_splitMode_both">Show double pages in horizontal and then in two pages</string>
    <string name="chapter_form_readMode">Read mode</string>
    <string name="chapter_form_mangaMode">Manga mode (right to left)</string>
    <string name="chapter_form_comicMode">Comic mode (left to right)</string>

    <string name="observed_folders_view_title">Observed Folders View</string>

    <string name="folder_form_title">Add Folder</string>
    <string name="folder_form_name">Name</string>
    <string name="folder_form_path">Path</string>
    <string name="folder_form_no_path_selected">no path selected</string>
    <string name="folder_form_empty_path_error">The path can\'t be empty!</string>
    <string name="folder_form_folder_deleted">Folder %1$s deleted</string>
    <string name="folder_form_example">Select your mangas folder, you don\'t need to select each manga, just the folder where the mangas are.</string>
    <string name="folder_form_extructure_example"><![CDATA[
        MyMangas/\n
├── 5Toubun no Hanayome\n
│\t\t\t\t├── Chapter 113\n
│\t\t\t\t├── Chapter 114\n
│\t\t\t\t└── Chapter 115\n
├── Hitoribocchi\n
│\t\t\t\t├── Chapter 23\n
│\t\t\t\t├── Chapter 24\n
│\t\t\t\t└── Chapter 25\n
├── JoJo\'s Bizarre Adventure\n
│\t\t\t\t├── Chapter 38\n
│\t\t\t\t└── Chapter 39\n
└── Komi-san wa Komyushou Desu.\n
\t\t\t\t\t└── Chapter 230\n
    ]]>
</string>
    <string name="folder_form_extructure_example_text">Look a this example, here you\'ll select <b>MyMangas</b>:</string>

    <string name="hidden_chapters_title">Hidden Chapters</string>
    <string name="hidden_chapters_section_title">Hidden Chapters View</string>
    <string name="hidden_chapters_chapter_returned">Chapter returned</string>

    <!-- Settings -->
    <string name="preference_kindle_mail_title">Kindle email</string>
    <string name="preference_kindle_mail_description">Email where the mangas will be sent to</string>
    <string name="preference_delete_chapters_title">Delete chapters after upload</string>
    <string name="preference_delete_chapters_description_positive">Chapters will be deleted</string>
    <string name="preference_delete_chapters_description_negative">Chapters won\'t be deleted</string>
    <string name="preference_hiddenChapters_title">Hidden List</string>
    <string name="preference_hiddenChapters_description">Open a list with all the hidden chapters</string>
    <string name="preference_switchDebug_title">Enable Debug</string>
    <string name="preference_switchDebug_description">Can make the app slower</string>
    <string name="preference_resetChapters_title">Reset list of new detected chapters</string>
    <string name="preference_resetChapters_description">Only the ones not uploaded yet</string>
    <string name="preference_about_title">About us</string>
    <string name="preference_null_author_donger_title">Author donger</string>
    <string name="preference_null_author_donger_description_positive">Will display dongers when there is no author set</string>
    <string name="preference_null_author_donger_description_negative">Won\'t display dongers when there is no author set</string>
    <string name="preference_showTutorial_title">Show Tutorial</string>
    <string name="preference_showTutorial_description">Shows the introduction to the app again</string>

    <string name="reset_chapters_confirm_title">Are you sure?</string>
    <string name="reset_chapters_confirm_msg">This will delete all the chapters not uploaded</string>
    <string name="reset_chapters_negative_btn">Cancel</string>
    <string name="reset_chapters_positive_btn">OK</string>
    <string name="reset_chapters_done_title">Database cleared!</string>
    <string name="reset_chapters_done_msg">All not uploaded chapters deleted</string>
    <string name="reset_chapters_done_btn">OK</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_first_group">Manga2Kindle info</string>
    <string name="about_second_group">Follow me!</string>
    <string name="about_description">Hi! my name is Eduardo and I like to make things. Feel free to email me, I\'ll be happy to hear you! If you liked the app leave me some stars on the Play Store! ╰(✿˙ᗜ˙)੭━☆ﾟ.*･｡ﾟ</string>
    <string name="about_username" translatable="false">EduFdezSoy</string>
    <string name="about_email" translatable="false">hello@manga2kindle.com</string>
    <string name="about_website" translatable="false">https://manga2kindle.com/</string>
    <string name="about_website_title" translatable="false">manga2kindle.com</string>
    <string name="about_play_store_url" translatable="false">es.edufdezsoy.manga2kindle</string>
    <string name="about_play_store_title" translatable="false">Play Store</string>
    <string name="about_github_title" translatable="false">GitHub</string>
    <string name="about_twitter_title" translatable="false">Twitter</string>
    <string name="about_instagram_title" translatable="false">Instagram</string>
    <string name="about_version" translatable="false">Manga2Kindle v%1$s - Eduardo Fernandez</string>
    <string name="about_version_easterEgg">What were you thinking? I don\'t have time for that!</string>

    <!-- Drawer -->
    <string name="drawer_newChapters">New Chapters</string>
    <string name="drawer_uploadedChapters">Uploaded Chapters</string>
    <string name="drawer_observedFolders">Observed Folders</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_cuteHello">henlo! :D</string>
    <string name="drawer_header_tittle" translatable="false">Manga2kindle</string>

    <!-- Chapter Status -->
    <string name="chapter_status_enqueue">enqueue</string>
    <string name="chapter_status_compressing">compressing</string>
    <string name="chapter_status_uploading">uploading</string>
    <string name="chapter_status_processing">processing</string>
    <string name="chapter_status_failed">failed</string>
    <string name="chapter_status_failed_local">failed at home</string>
    <string name="chapter_status_success">success</string>

    <!-- Actions -->
    <string name="action_undo">UNDO</string>
    <string name="action_loading">loading…</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_upload">Upload</string>
    <string name="action_search">Search</string>

    <!-- Errors -->
    <string name="error_file_too_big">Looks like this file is too big!</string>
    <string name="error_upload_failed">Upload failed</string>
    <string name="error_no_mail_set">There is no mail set to send it!</string>

    <!-- Tutorial -->
    <string name="tuto_email_title">Add your Kindle email</string>

    <!-- Slides -->
    <string name="slide_welcome">Welcome to Manga2Kindle!\nTo use the app we need to configure a few things, so let\'s start!</string>
    <string-array name="slide_greetings">
        <item>Ohayo gozaimasu!</item>
        <item>Konnichiwa!</item>
        <item>Konbanwa!</item>
    </string-array>
    <string name="slide_2_title">First you\'ll need to authorize our server to send you mangas:</string>
    <string name="slide_2_p1">• You can do that from your Amazon\'s Account, search for \"Manage your Content and Devices\" and go to \"Preferences\"</string>
    <string name="slide_2_p2">• Scroll to \"Personal Documents Settings\" and click \"Add a new authorized e-mail\" then just write ours one:</string>
    <string name="slide_2_email" translatable="false">manga2kindle@m2k.wf</string>
    <string name="slide_2_help">If you need more help, check out our guide:</string>
    <string name="slide_2_help_url" translatable="false">m2k.wf/h1</string>
    <string name="slide_3_title">Add your Kindle device email:</string>
    <string name="slide_3_p1">You can find it in your Kindle\'s settings, under \"Your Account\", right at the bottom.</string>
    <string name="slide_3_help">If you need help, check out this guide:</string>
    <string name="slide_3_help_url" translatable="false">m2k.wf/h2</string>
    <string name="slide_3_email_hint">my_device@kindle.com</string>
    <string name="slide_3_email_error">Please write an email!</string>
    <string name="slide_4_title">That\'s all!</string>
    <string name="slide_4_p1">Now you can add the folders where your mangas are and the chapters will start showing.</string>
    <string name="slide_4_help">If you need more help, check out our guide:</string>
    <string name="slide_4_help_url" translatable="false">m2k.wf/h1</string>

    <!-- Descriptions -->
    <string name="description_logo">Manga2Kindle Logo</string>

    <!-- numbers -->
    <string name="number_one" translatable="false">1</string>
    <string name="number_two" translatable="false">2</string>
    <string name="number_three" translatable="false">3</string>

</resources>
