<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/slide4"
        tools:context=".ui.appIntro.slides.ForthSlideFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.30">

        <TextView
                android:id="@+id/textNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/number_three"
                android:textColor="@color/textImportantInverted"
                android:textSize="70sp"
                android:typeface="serif"
                app:layout_constraintEnd_toStartOf="@+id/tvText1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/slide_4_p1"
                android:textAlignment="viewStart"
                android:textColor="@color/textImportantInverted"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/tvText1"
                app:layout_constraintStart_toStartOf="@+id/textNumber"
                app:layout_constraintTop_toBottomOf="@+id/tvText1" />

        <TextView
                android:id="@+id/tvTextGuide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="35dp"
                android:text="@string/slide_4_help"
                android:textAlignment="center"
                android:textColor="@color/textRegularInverted"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvText2" />

        <TextView
                android:id="@+id/tvHelpURL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/slide_4_help_url"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/tvTextGuide"
                app:layout_constraintStart_toStartOf="@+id/tvTextGuide"
                app:layout_constraintTop_toBottomOf="@+id/tvTextGuide" />

        <TextView
                android:id="@+id/tvText1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/slide_4_title"
                android:textAlignment="viewStart"
                android:textColor="@color/textImportantInverted"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/textNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textNumber"
                app:layout_constraintTop_toTopOf="@+id/textNumber"
                app:layout_constraintVertical_bias="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>